# edge-proxy-json-gen

./: Cargo.toml  LICENSE  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/edge_proxy_json_gen/: all.html  fn.main.html  index.html  sidebar-items.js
doc/edge_proxy_json_gen/args/: fn.build_args.html  index.html  sidebar-items.js
doc/edge_proxy_json_gen/proxy/: index.html  sidebar-items.js  struct.ProxyOptions.html
doc/edge_proxy_json_gen/proxy/mode/: enum.ProxyModeOptions.html  index.html  sidebar-items.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/src/edge_proxy_json_gen/: args.rs.html  main.rs.html
doc/src/edge_proxy_json_gen/proxy/: mod.rs.html  mode.rs.html
src/: args.rs  main.rs
src/proxy/: mod.rs  mode.rs
